--- a/memoria/tex/abstract.tex
+++ b/memoria/tex/abstract.tex
@@ -11,7 +11,7 @@ Now, let's explain in detail the chapters of this document and their contents.
 
 In this first chapter we give a first insight about what is a fractal. There is not a unique definition of fractal, but in most cases, and specially the one introduced by \textit{Benoit Mandelbrot}, the fractal geometry's father, this term is related to the ideas of self similarity and dimension. 
 
-Firstly, we compare fractals with cotidians objects like trees, romanescu or rays. With this real life examples, we introduce the concept of `self similarity' and present some of the most popular and classic fractals: the Cantor set, the Sierpinski triangle, the Sierpinski Carpet, the Menger Sponge, the Koch curve and the Koch snowflake. We explain how each one is generated and some of their properties, including of course pictures.
+Firstly, we compare fractals with known objects like trees, romanescu or rays. With this real life examples, we introduce the concept of `self similarity' and present some of the most popular and classic fractals: the Cantor set, the Sierpinski triangle, the Sierpinski Carpet, the Menger Sponge, the Koch curve and the Koch snowflake. We explain how each one is generated and some of their properties, including of course pictures.
 
 All these classic examples help us to understand what the self similarity is, so it's time to learn about dimension. There are several types, but the most common fractals dimensions are the `box-counting dimension' and the `Hausdorff dimension'. We talk about both and about the `topological dimension', and after it we expose some relations between the different definitions given.
 
@@ -27,7 +27,7 @@ Using the Newton method to find roots of complex functions and evaluating the co
 
 This wouldn't be a fractals projects if we don't talk about Julia and Mandelbrot sets. We present the complex function $P_c(z)=z^2 +c$ for a fixed $c\in\C$ and its importance in this chapter. From this function we explain the algorithms used to visualize the Julia set of a complex number $c$ ($\mathcal{J}_c$) and the Mandelbrot set ($\mathcal{M}$). 
 
-We also show some self-similar regions they present, and finally we explain and visualize some generalizations of this sets. Everything is accompanied by lots of clarifying images.
+We also show some self-similar regions they present, and finally we explain and visualize some generalizations of these sets. Everything is accompanied by lots of clarifying images.
 
 \section*{Chapter 4: Iterated Function Systems}
 
@@ -39,7 +39,7 @@ In addition, although you can get images from SFIs, the inverse problem is also 
 
 \section*{Chapter 5: Introduction to the render tools}
 
-At this point, we could render many fractals images using Mathematica. The problem is Mathematica is not a render API, it executes the pixels sequentially, so the execution is very slow. We will give a little introduction to what we call `rasterization APIs', tools used to render 2D and 3D images. The main advantage of rasterization APIs is they use the computer's graphic card besides the central processor, so they are much faster. Hereby, we need to specify some fragments of code written in a special language, these are called `shaders'. 
+At this point, we could render many fractals images using Mathematica. The problem is Mathematica is not a render tool, it executes the pixels sequentially, so the execution is very slow. We will give a little introduction to what we call `rasterization APIs', tools used to render 2D and 3D images. The main advantage of rasterization APIs is they use the computer's graphic card besides the central processor, so they are much faster. Hereby, we need to specify some fragments of code written in a special language, these are called `shaders'. 
 
 Specifically, we will use WebGL, an API that can be managed using JavaScript, so we can develop a web application and execute it using a web browser. WebGL needs the shader to be written using the `GL Shading Language' (GLSL). In this chapter we expose the main components of a WebGL based application and code step by step a very simple example.
 
@@ -55,11 +55,11 @@ It is easy to identify a pixel of the screen with an element of the complex plan
 
 In this chapter, we give a deeper definition of this method and its components. The goal now is develop a simple, but complete, ray-tracer. It means, render a scene with easy objects, like spheres and a plane. Now let's introduce the roadmap we followed.
 
-First, the creation of the rays, there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. After that, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Last, but not least, we introduce in detail and implement a lighting model in order to give volume, shine and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. 
+First, the creation of the rays, there is not ray-tracing without rays. After that, we assign a color to each pixel asuming the scene is empty. It means, we define which colors will we assign to the pixels whose rays miss. Next, we add some spheres and a plane to the scene, programming the intersection sphere-ray and plane-ray, which fortunately are so easy. Once we have filled the scene with objects, it's time to move the camera. We modify the ray creation code in order to let us change freely the point of view, allowing us to see different perspectives of the same scene. Later, we introduce in detail and implement a lighting model in order to give volume, shine, shadows and realism to the scene, assigning a material to each object, creating light sources and evaluating this lighting model at each intersection point. Specifically, we will use the `Phong lighting model', which is not very complex, but enough for our purpose. Last, but not least, we introduce a edge smoothing technic called `Multisampling Antiliasing', which we'll use in order to care about the realism.
 
 \section*{Chapter 8: Rendering 3D fractals}
 
-This is the last chapter, the icing on the cake. Starting from the code we wrote in the previous chapter, we have to modify the existing and include some new code in order to visualize 3D fractals. The first fact: calculate the intersection is not that simple as it is when you render Spheres and Planes. There is not an easy to solve equation like before. Nevertheless, for each object, we can try to find a signed distance function (SDF). This is a scalar field which calculates for each point of the space a lower bound of the distance to the object's surface. So, you can undertand a surface as the set of points where the SDF is equal to 0.
+This is the last chapter, the icing on the cake. Starting from the code we wrote in the previous chapter, we have to modify the existing and include some new code in order to visualize 3D fractals. The first fact: calculate the intersection is not that simple as it is when you render Spheres and Planes. There is not an easy way to solve equation like before. Nevertheless, for each object, we can try to find a signed distance function (SDF). This is a scalar field which calculates for each point of the space a lower bound of the distance to the object's surface. So, you can undertand a surface as the set of points where the SDF is equal to 0.
 
 We can use this concept in ray tracing with the sphere-tracing algorithm. It consist of marching iteratively along the ray until a intersection is found. Starting from the observer's position, at every step we calculate the minimum distance to any object of the scene. Unless this distance is so small (in that case we consider we reached an intersection), we advance that minimun distance along the ray, repeating the calculation until the ray misses or finds an intersection.
 
