--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -238,11 +238,11 @@ Buscamos ahora obtener alguna figura similar a la imagen \ref{fig:mandelbrot-int
     |c^2+c| & \geq & ||c^2|-|c|| \\
             & = & ||c|^2 -|c|| \\
             & = & |c|^2-|c| \text{ (Pues al ser } |c|>2, |c|^2>|c|) \\
-            & = & (|c|-1)|c| 
+            & = & (|c|-1)|c|.
   \end{eqnarray*}
   Y como $|c|>2\Leftrightarrow |c|-1>1$, concluimos que
   $$
-  |z_2|=|c^2+c| > |c| = \max\{|c|,2\} = e_c
+  |z_2|=|c^2+c| > |c| = \max\{|c|,2\} = e_c.
   $$
   Por lo que aplicando el teorema \ref{th:escape}, la sucesión $\{z_n\}$ es divergente.
 \end{proof}
@@ -420,7 +420,7 @@ Además de todos los conjuntos de Julia ya tratados y visualizados, utilizando o
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.5]{./img/C3/juliaS-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaS-2.png}
+    \includegraphics[scale=0.45]{./img/C3/juliaS-1.png} &   \includegraphics[scale=0.45]{./img/C3/juliaS-2.png}
   \end{tabular}
 \end{figure}
 
@@ -430,18 +430,16 @@ Además de todos los conjuntos de Julia ya tratados y visualizados, utilizando o
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.5]{./img/C3/juliaC-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaC-2.png}
+    \includegraphics[scale=0.45]{./img/C3/juliaC-1.png} &   \includegraphics[scale=0.45]{./img/C3/juliaC-2.png}
   \end{tabular}
 \end{figure}
-
-\newpage
 
 \item Con la familia $f_c(z)=c\cdot e^z$:
   
 \begin{figure}[ht]
   \centering
   \begin{tabular}{cc}
-    \includegraphics[scale=0.5]{./img/C3/juliaE-1.png} &   \includegraphics[scale=0.5]{./img/C3/juliaE-2.png}
+    \includegraphics[scale=0.45]{./img/C3/juliaE-1.png} &   \includegraphics[scale=0.45]{./img/C3/juliaE-2.png}
   \end{tabular}
 \end{figure}
 
