--- a/memoria/tex/capitulos/planificacion-presupuestos.tex
+++ b/memoria/tex/capitulos/planificacion-presupuestos.tex
@@ -20,9 +20,9 @@ Con esto, ya tenemos la infraestructura básica del proyecto software.
 
 Con el código hasta ahora, debemos modificar la estructura para que el software grafique los primeros fractales 2D de forma estática. Primero bastará con graficarlos en blanco y negro para posteriormente añadir colores.
 
-Seguidamente, debemos preparar el documento web para el soporte de interactividad y gestión de eventos. Es decir, añadir formularios, botones, deslizadores... en principio sin funcionalidad alguna. Hecho esto, añadimos definitivamente la interactividad, permitiendo que a partir del documento web se pueda interactuar con el canvas y la escena que se está visualizando.Con cada avance en el desarrollo debe cuidarse la apariencia y el estilo de la web.
+Seguidamente, debemos preparar el documento web para el soporte de interactividad y gestión de eventos. Es decir, añadir formularios, botones, deslizadores... en principio sin funcionalidad alguna. Hecho esto, añadimos definitivamente la interactividad, permitiendo que a partir del documento web se pueda interactuar con el canvas y la escena que se está visualizando. Con cada avance en el desarrollo debe cuidarse la apariencia y el estilo de la web.
 
-En este punto, el proyecto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto, estipulamos que debe estar terminada antes del \textbf{25 de Marzo de 2022}.
+En este punto, el proyecto consiste en una web interactiva para visualizar fractales en 2D. Esta tarea no es tampoco demasiado compleja al ser sencillo identificar un canvas 2D con una región del plano sencilla, pero requiere mucha funcionalidad muy distinta, la cual es la primera vez que se programa, y teniendo en cuenta que es una parte importante del proyecto que servirá de base para el resto de fases, estipulamos que debemos dar como margen hasta el \textbf{25 de Marzo de 2022}.
 
 \subsection*{Construcción de un programa ray-tracer}
 
@@ -57,7 +57,19 @@ Estas modificaciones completarían el desarrollo software de la visualización e
 
 Desde el inicio, al estar en fases de desarrollo, hemos descuidado bastante la apariencia de la página en lo que a secciones, fuentes y colores se refiere. Por tanto, añadiremos estilo y código CSS al documento para darle una apariencia más visual y amigable.
 
-La última, pero no por ello menos importante fase del proyecto debe estar finalizada el día de la entrega, que es el NI IDEEAAAAAAAAA :DDDDD %TODO PONERLA
+La última, pero no por ello menos importante fase del proyecto debe estar finalizada el día de la entrega, que es el \textbf{20 de Junio de 2022}.
+
+\vspace{0.5cm}
+
+En conclusión, y a modo de resumen, presentamos en la imagen \ref{fig:Gantt} el conocido como \textit{diagrama de Gantt}, que sintetiza en una tabla el tiempo dedicado a cada actividad. Cada columna representa una semana, identificada por el día y el mes del lunes de dicha semana.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.44]{img/Gantt.png}
+    \caption{Diagrama de Gantt de la planificación del proyecto}
+    \label{fig:Gantt}
+\end{figure}
+
 
 \section*{Presupuesto del proyecto}
 
