--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -43,11 +43,11 @@ En adelante, y salvo que se indique lo contrario, cuando hablemos en términos t
 Creado por el célebre matemático \textit{George Cantor}, este fractal se construye a partir de un intervalo aplicando el siguiente proceso iterativo:
 
 \begin{enumerate}
-\item Partimos del intervalo cerrado $[0,1]$, aunque realmente es indiferente qué intervalo se escoja, pues el resultado final será el mismo salvo una homotecia. Dividimos dicho intervalo en tres intervalos iguales y extraemos el intervalo central, manteniendo los extremos. Es decir, extraemos el intervalo abierto $\left(\frac 1 3, \frac 2 3\right)$ y mantenemos $\left[0,\frac 1 3\right]$ y $\left[\frac 2 3, 1\right]$. Nótese que obtenemos $2=2^1$ intervalos, cada uno a escala $\frac 1 3=\left(\frac 1 3\right)^1$ del original.
+\item Partimos del intervalo cerrado $[0,1]$, aunque realmente es indiferente cuál se escoja, pues el resultado final será el mismo salvo una homotecia. Dividimos dicho intervalo en tres intervalos iguales y extraemos el intervalo central, manteniendo los extremos. Es decir, extraemos el intervalo abierto $\left(\frac 1 3, \frac 2 3\right)$ y mantenemos $\left[0,\frac 1 3\right]$ y $\left[\frac 2 3, 1\right]$. Nótese que obtenemos $2=2^1$ intervalos, cada uno a escala $\frac 1 3=\left(\frac 1 3\right)^1$ del original.
 
 \item Aplicamos el mismo proceso a los intervalos $\left[0,\frac 1 3\right]$ y $\left[\frac 2 3, 1\right]$. Esto es, se dividen ambos en tres partes iguales y se extrae el intervalo abierto central de cada uno de ellos, manteniendo los extremos. En este caso obtendríamos $4=2^2$ intervalos iguales, cada uno de ellos a escala $\frac 1 3$ de los dos obtenidos en el primer paso y a escala $\frac 1 9=\left(\frac 1 3\right)^2$ del original.
 
-\item Repetimos este proceso de manera indefinida, de manera que en el $n$-ésimo paso se obtendrían $2^n$ intervalos a escala $\left(\frac 1 3\right)^n$. Denotemos como $C_n$ al conjunto unión de los $2^n$ intervalos de recta que se generan en el paso $n$ del proceso.
+\item Repetimos este proceso de manera indefinida, de manera que en el $n$-ésimo paso se obtendrían $2^n$ intervalos a escala $\left(\frac 1 3\right)^n$. Denotemos como $C_n$ al conjunto unión de los $2^n$ intervalos que se generan en el paso $n$ del proceso.
 \end{enumerate} 
 
 Los puntos del intervalo inicial $[0,1]$ que restan tras las infinitas iteraciones son los que conforman el \textit{conjunto de Cantor}, que denotamos con $\mathbf{C}$, de forma que 
@@ -56,7 +56,7 @@ $$\mathbf{C}=\bigcap_{n\in\N}C_n.$$
 
 \begin{figure} [ht]
 \centering
-\includegraphics[scale = 0.4]{img/cantor.png}
+\includegraphics[scale = 0.6]{img/cantor.png}
 \caption{Iteraciones del proceso de generación del conjunto de Cantor}
  \label{fig:Cantor}
 \end{figure}
@@ -76,7 +76,7 @@ donde hemos usado que la suma de una serie geométrica de razón $|q|<1$ es $$\s
 
 Esto nos lleva a concluir, teniendo en cuenta que para los subconjuntos de $\R$ considerados su longitud no es más que su medida usual de Lebesgue, que la longitud eliminada es igual a la longitud original, es decir, la longitud de $\mathbf C$ es nula y aún así tenemos infinitos puntos, por ejemplo los extremos de los intervalos que se van generando. Es decir, los puntos de $\mathbf{C}$ no están agrupados, sino que forman una especie de \textit{polvareda}.
 
-Mencionamos finalmente que el conjunto de Cantor posee importantes propiedades desde un punto de vista topológico, como por ejemplo el conocido teorema de Alexandroff-Hausdorff, que establece que cualquier espacio topológico compacto es imagen continua de $\mathbb C$. Puede encontrarse una prueba de este resultado en \cite{Dreher}. Este resultado tiene además algunas aplicaciones en otros campos de las matemáticas, por ejemplo en curvas y en conjuntos convexos. Si se desea profundizar en estas aplicaciones recomendamos consultar \cite{Benyamini}.
+Mencionamos finalmente que el conjunto de Cantor posee importantes propiedades desde un punto de vista topológico, como por ejemplo el conocido teorema de Alexandroff-Hausdorff, que establece que cualquier espacio topológico compacto es imagen continua de $\mathbf C$. Puede encontrarse una prueba de este resultado en \cite{Dreher}. Este resultado tiene además algunas aplicaciones en otros campos de las matemáticas, por ejemplo en curvas y en conjuntos convexos. Si se desea profundizar en estas aplicaciones recomendamos consultar \cite{Benyamini}.
 
 \subsection{El triángulo de Sierpinski}
 \label{subsection:triangulo-Sierpinski} 
@@ -395,7 +395,7 @@ En $\R^2$ dotado de la topología usual, consideramos una recta cualquiera, llam
 
 La dimensión por cajas, aunque útil en la práctica, al comienzo de la sección \ref{subsection:dim-Hausdorff} hemos comprobado que tiene algunos problemas. No obstante, para muchos fractales, y en particular para los que cumplen la \textit{condición de conjunto abierto} (véase sección \ref{section:sfi-conjuntos-autosimilares}), resulta más sencillo computacionalmente calcular su dimensión por cajas frente a su dimensión de Hausdorff.
 
-En general, y como se puede comprobar en \cite[Sección 3.1]{alma991007022459704990}, ocurre que la dimensión por cajas acota superiormente a la dimensión de Hausdorff, esto es, dado $A\subset\R^n$:
+En general, y como se puede comprobar en \cite[Sección 3.1]{alma991007022459704990}, ocurre que la dimensión por cajas acota superiormente a la dimensión de Hausdorff, es más, dado $A\subset\R^n$:
 $$
 \dim_H(A)\leq\diminf (A) \leq \dimsup (A),
 $$
