--- a/memoria/tex/capitulos/introduccion.tex
+++ b/memoria/tex/capitulos/introduccion.tex
@@ -1,17 +1,17 @@
 
-Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor}. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
+Desde la antiguedad, el ser humano siempre ha seguido procesos iterativos. Aunque normalmente la iteración en el sentido moderno se asocia a algoritmos, bucles o recursión, en realidad es un concepto ancestral. Las recetas de cocina, la recolección del cultivo, construcción de edificios, todas ellas son procesos que se basan en repetir operaciones sucesivamente una y otra vez. La iteración, y el tan ambiguo concepto del infinito matemático que ha atormentado las mentes de los pensadores desde los tiempos de Zenón hasta hace 120 años gracias a los trabajos del célebre matemático \textit{George Cantor} son los precursores de toda la teoría fractal que disponemos a día de hoy. La primera aproximación a lo que hoy llamamos fractales llegó con el descubrimiento de funciones que a pesar de ser continuas no admiten derivada, esto en los trabajos de \textit{Bernhard Riemann} y \textit{Karl Weierstrass} en la década de 1870, dando a luz a lo que en aquellos tiempos se conocían como ``monstruos matemáticos''.
 
-Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron de manera independiente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
+Unos 50 años después, allá por 1917, \textit{Gaston Julia} y \textit{Pierre Fatou}, con el objetivo del \textit{Grand Prix des Sciences mathematiques} que anunció la Academia Francesa de Ciencias publicaron independientemente trabajos sobre iteración de funciones racionales complejas. En 1918 Julia publicó un tratado extenso sobre el tema, al cual se le unió el año siguiente una trilogía de trabajos por parte de Fatou. Por su parte, el conocido matemático alemán \textit{Felix Hausdorff} publica en este mismo año un artículo sobre la dimensión posiblemente no entera de conjuntos \cite{Hausdorff1919}. 
 
 Fueron estos avances los que sirvieron de inspiración a \textit{Benoit Mandelbrot}, quien a partir de 1975 con sus trabajos, y en especial su libro \textit{The fractal geometry of nature} \cite{alma991007242979704990} creó lo que hoy conocemos como `Geometría Fractal'. A partir de este momento los científicos con ayuda de los primeros computadores consiguieron visualizar lo que los pioneros ya intuyen.
 
-Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del computador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
+Desde entonces, científicos como \textit{Michael Barnsley} o \textit{Kenneth Falconer} desarrollan teorías como los sistemas de funciones iteradas, los cuales con ayuda del ordenador suponen una revolución en la geometría fractal, con aportes como el \textit{teorema del collage}, que tiene aplicaciones en ámbitos de la matemática más allá de los fractales. 
 
 Más tarde aparecerían las primeras gráficas modernas y la informática gráfica. No fue hasta la década de 1980 cuando apareció el concepto de `emisión de rayos' en la computación gráfica. Esta sería la semilla de la costosa, pero productiva técnica de generación de imágenes que conocemos como `Ray-Tracing'. Gracias a ella, la visualización por ordenador de fractales incluso en tres dimensiones llega a su auge, gracias a trabajos como los de \textit{John Hart}, \textit{Keenan Crane} o \textit{Íñigo Quilez} en las décadas de 1990 y 2000.
 
 A día de hoy, con la revolución tecnológica en la que nos vemos sumidos en la actualidad, toda la teoría fractal está en explotación, tanto en el ámbito informático como en el puramente matemático.
 
-Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen un alto prestigio entre las revistas dedicadas al mundo de la investigación. Por ejemplo, en el ámbito puramente fractal, la revista \href{https://www.worldscientific.com/worldscinet/fractals}{\textcolor{blue}{\textit{Fractals}}}. Por su parte, en el ámbito de problemas inversos encontramos la revista \href{https://iopscience.iop.org/journal/0266-5611}{\textcolor{blue}{\textit{Inverse Problems}}}.
+Existen revistas, catalogadas como `JCR' (Journal Citation Reports), que tienen un alto prestigio entre las revistas dedicadas al mundo de la investigación. Por ejemplo, en el ámbito meramente fractal, la revista \href{https://www.worldscientific.com/worldscinet/fractals}{\textcolor{blue}{\textit{Fractals}}}. Por su parte, en el ámbito de problemas inversos encontramos la revista \href{https://iopscience.iop.org/journal/0266-5611}{\textcolor{blue}{\textit{Inverse Problems}}}.
 
 La geometría fractal tiene también aplicación vigente en la teoría de identificación de parámetros, ejemplo de ello es el artículo titulado \textit{Solving Parameter Identification Problems using the Collage Distance and Entropy} \cite{LaTorre}, con fecha de 2021. Con respecto a desarrollo de herramientas, podemos encontrar en la revista `Fractals' el artículo de 2019 \textit{Self-similarity of solutions to integral and differential equations with respect to a fractal measure} \cite{LaTorre2019}.
 
@@ -23,7 +23,7 @@ Vemos que el ray tracing está muy a la orden del día, pero sólo hace unos 3 a
 
 Debemos también mencionar el evento \href{https://s2022.siggraph.org/}{\textcolor{blue}{Siggraph}}, que es un evento anual en el que se exponen nuevas técnicas y avances en el mundo de la computación gráfica. En su web podemos encontrar muchos papers y artículos relacionados con la generación de imágenes. Por ejemplo en la siguiente encontramos muchos textos con fecha de 2021: \url{https://kesen.realtimerendering.com/sig2021.html}.
 
-Como hemos podido comprobar unos párrafos atrás, la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
+Como hemos podido comprobar, la teoría de la geometría fractal es una disciplina muy estudiada e investigada incluso en la actualidad. No obstante, es muy desconocida en general, tanto para estudiantes como para profesionales de las matemáticas y la informática, a pesar de tener una muy estrecha relación con ambas ciencias. Por ello, queremos aportar a esta disciplina nuestro granito de arena para que se dé a conocer a todo el público que lo desee. 
 
 Para ello, en este documento se presenta desde el punto de vista matemático los conceptos y resultados principales de la geometría fractal, utilizando no sólo desarrollos teóricos y texto, sino combinándolos también con ejemplos, imágenes y códigos para graficarlas. De esta forma se ofrece un contenido fácil de seguir y atractivo para el lector. 
 
