--- a/memoria/tex/conclusiones.tex
+++ b/memoria/tex/conclusiones.tex
@@ -2,7 +2,7 @@
 % ─── CONCLUSIONES ───────────────────────────────────────────────────────────────
 %
 
-Para finalizar la redacción de esta memoria, pondremos en valor algunas conclusiones extraídas durante el desarrollo de este trabajo. En primer lugar, nos gustaría resaltar que, salvo las bases, todo este proyecto ha sido sobre una materia totalmente nueva. No existe ninguna materia en el grado ni de informática ni de matemáticas que explique geometría fractal, a pesar de ser una disciplina no sólo muy hermosa visualmente, sino muy relacionada tanto con informática como con matemáticas.
+Para finalizar la redacción de esta memoria, pondremos en valor algunas conclusiones extraídas durante el desarrollo de este trabajo. En primer lugar, nos gustaría resaltar que, salvo las bases, todo este proyecto ha sido sobre una materia totalmente nueva. No existe ninguna materia en el grado ni de informática ni de matemáticas que explique geometría fractal, a pesar de ser una disciplina no sólo muy hermosa visualmente, sino muy relacionada tanto con una como con otra.
 
 De hecho, llama la atención la cantidad de distintas áreas de la ciencia y de las matemáticas que confluyen en la geometría fractal, al menos en este TFG. Ya en la introducción vimos la cantidad de distintos ámbitos que se recomendaba conocer: análisis, variable compleja, matemática aplicada, geometría euclídea... O por ejemplo, el artículo \cite{Hubbard-Douady} del cual se extrae el `potencial de Hubbard-Douady', que realmente es un concepto puramente matemático aparentemente poco relacionado con esta disciplina, pero finalmente sirve para extraer una SDF con la que visualizar imágenes fractales en 3D.
 
